--- a/app/src/index.html
+++ b/app/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vimp</title>
   </head>
-  <body>
+  <body style="height: 100vh; max-height: 100vh; overflow-y: hidden; overflow-x: hidden; background-color: black;">
     <div id="root"></div>
   </body>
 </html>
