- Mudança nas pastas - mainWindow integrado a main.ts - teclas de atalho "funcionam" - Renomeado electronAPI para app em funções ipc - Formatação com Prettier

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--
+    <meta
+        http-equiv="Content-Security-Policy"
+        content="script-src 'self' 'unsafe-inline'"
+      />
+  -->
+    <title>Vimp</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vimp</title>
-</head>
-
-<body style="height: 100vh; max-height: 100vh; overflow-y: hidden; overflow-x: hidden; background-color: black;">
-  <div id="root"></div>
-</body>
-
+  <body style="height: 100vh; max-height: 100vh; overflow-y: hidden; overflow-x: hidden; background-color: black;">
+    <div id="root"></div>
+  </body>
 </html>
