Vimp agora suporta reproduzir a partir de arquivos locais ContentSecurityPolicy definida Criado protocolo electron para acessar recursos locais Botão de escolher arquivo da home funcional

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--
     <meta
-        http-equiv="Content-Security-Policy"
-        content="script-src 'self' 'unsafe-inline'"
-      />
-  -->
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; img-src 'self' data: vimp://*; media-src 'self' vimp://*; object-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';"
+    />
     <title>Vimp</title>
   </head>
 
