Projeto migrado para electron-vite para melhorar o desenvolvimento devido a lentidão do webpack

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -12,5 +12,6 @@
 
   <body style="height: 100vh; max-height: 100vh; overflow-y: hidden; overflow-x: hidden; background-color: black;">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
