--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -10,7 +10,7 @@
     <title>Vimp</title>
   </head>
 
-  <body class="h-screen max-h-screen overflow-hidden bg-black">
+  <body class="h-screen max-h-screen overflow-clip">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
